# gfys

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gfys/: main.py
